--- a/Libro.tex
+++ b/Libro.tex
@@ -395,11 +395,7 @@ all'infinito.
 L’evasione fiscale riduce le risorse disponibili per i servizi pubblici, contribuendo a una percezione di inefficienza del sistema. In questo senso, la responsabilità collettiva gioca un ruolo cruciale.
 
 \subsubsection{Suggestioni}
-Effetto Priming\endnote{\raggedright\url{https://it.wikipedia.org/wiki/Priming\_(psicologia)} }: Questo effetto dice che
-l'esposizione a uno stimolo può influenzare la tua risposta.
-Ad esempio, dopo aver letto la parola ospedale, una persona riconoscerà più rapidamente parole come medico o iniezione. Oppure, vedere immagini legate alla pulizia può indurre le persone a comportarsi in modo più ordinato.
-
-Quanto detto è contrario alla filosofia: fake it until you make it, ovvero, fingi fino a quando non lo ottieni, figlia
+Fake it until you make it, ovvero, fingi fino a quando non lo ottieni, figlia
 di alcuni movimenti motivazionali, che grazie a frasi auto-motivazionali promettono di farti raggiungere certi risultati
 personali e farti diventare una persona diversa. Queste tecniche si
 utilizzano quando un atleta deve affrontare una gara, in questo caso possono funzionare perché applicate su un soggetto che prima di tutto ha passato tempo ad allenarsi e ad acquisire le competenze per affrontare quel determinato compito. Queste tecniche però possono essere pericolose, perché, se
@@ -2425,24 +2421,10 @@ trovare pronti e reagire concretamente.
 
 Seneca ci invita a distinguere tra eventi che possiamo cambiare da quelli che non possiamo cambiare. Quando la situazione non si può cambiare, come il comportamento degli altri, forse è meglio cambiare il nostro atteggiamento verso essi.
 
-
-
-
-
-
-
-
-Secondo Epicuro, la felicità (atarassia) consiste nell’assenza di dolore fisico e turbamento mentale, cercata attraverso piaceri moderati e la virtù. Se mangi, dormi, bevi e non stai male in generale allora sei felice. Per altri il contrario della felicità non è il dolore, ma la noia. Pensa a
-come stai ora, probabilmente sei seduto, rilassato, la tua vita non è in pericolo, non c'è dolore.
-Ora forse ti staranno venendo in mente tutti i problemi che hai, ma forse sono cose che non esistono ora, riguardano ipotetici scenari per il futuro o errori fatti nel passato, in questo momento forse non ci sono
-problemi. I problemi spesso sono vivi solo nella nostra testa, siamo noi a tenerli vivi e spesso non riguardano il
-momento presente. Va bene pensare ai problemi anticipatamente, solo se siamo noi a deciderlo. Mentre va notato quando la nostra mente torna ai problemi in maniera "automatica" e compulsiva, quando non l'abbiamo deciso noi, quando di default, la nostra mente torna su questi pensieri.
+Secondo Epicuro, la felicità (atarassia) consiste nell’assenza di dolore fisico e turbamento mentale, cercata attraverso piaceri moderati e la virtù. Se mangi, dormi, bevi e non stai male in generale allora sei felice. I problemi spesso sono vivi solo nella nostra testa, siamo noi a tenerli vivi e spesso non riguardano il presente. Va bene pensare ai problemi anticipatamente, solo se siamo noi a deciderlo. Mentre va notato quando la nostra mente torna ai problemi in maniera "automatica" e compulsiva, quando non l'abbiamo deciso noi, quando di default, la nostra mente torna su questi pensieri.
 Quindi ridefinendo le sensazioni della felicità possiamo dire che quello che stai provando ora possiamo chiamarla felicità. 
 
 Le persone più felici sono quelle che tendono a pensare meno alla felicità.
-
-Recenti teorie psicologiche ritengono essere piuttosto raro avere un trauma che rimane così nascosto alla nostra parte conscia come
-suggeriva Freud da non conoscerlo. I traumi che hai avuto, probabilmente li conosci. In certi contesti, può risultare più efficace un approccio orientato al presente, come quello offerto dall'ACT, dalla DBT o dalla psicoterapia breve strategica. Questi modelli, focalizzati sulla risoluzione dei problemi e supportati da evidenze scientifiche, possono fornire strumenti utili per il cambiamento, pur senza la necessità di un'esplorazione approfondita e prolungata del passato.
 
 Mi è piaciuto molto un pezzo letto su “Una gran voglia di vivere”\endnote{\raggedright\url{https://www.amazon.it/dp/8804707275} } di
 Fabio Volo: Dalla strada guardavo la finestra della cucina e cercavo di ricostruire perfettamente
@@ -2457,9 +2439,11 @@ comprende sarà subito felice, immediatamente, nello stesso istante. […] Tutto
 tutto è bene. Se sapessero di stare bene, starebbero bene; ma, finché non sapranno di stare bene, staranno male. Ecco
 tutta l'idea! Tutto! E non ce n'è un'altra.“ - Fëdor Dostoevskij, libro I demoni
 
+Non sappiamo se esiste il paradiso, forse ci siamo già vivendo e stiamo rovinando tutto - Sadhguru
+
 Quindi è tutto qua? Questa è la felicità? Ti aspettavi qualcosa di meglio? Delle sensazioni più forti? Il problema a volte è questo, ci aspettiamo qualcosa di troppo elevato, irraggiungibile e irrealistico ma se non riusciamo a
 realizzarlo potremmo stare male. Quello che tanti cercano è una vita come quella dei film, coi i soldi, fama, successo,
-sempre in spiaggia e sempre in viaggio come fine per sentire quelle forti emozioni di euforia. Potresti anche riuscire
+sempre in spiaggia e sempre in viaggio per sentire quelle forti emozioni di euforia. Potresti anche riuscire
 a raggiungere tutti questi obiettivi, avere belle macchine, soldi, fama, successo, questo seppur sia difficile non è
 irrealizzabile, ma lo è la impermutabile sensazione di euforia per come la intendiamo. Il mondo è pieno di esempi, di
 documentari, biografie di persone di successo andate in depressione e, questi racconti hanno in comune la
@@ -2469,7 +2453,7 @@ tutto il mondo materiale e, ti accorgi che non sei ancora felice, ma con la diff
 
 Nelle ricerche di Jutta Heckhausen su donne in premenopausa senza figli, è stato osservato che, abbandonata l’illusione della maternità, alcuni indicatori di distress emotivo diminuivano; tuttavia lo studio va interpretato con cautela per campione, durata e fattori di supporto sociale. A volte alla base della depressione, può esserci la speranza. 
 
-Nel libro "Troppo comodi"\endnote{\raggedright\url{https://www.amazon.it/dp/8836201474}} viene spiegato il concetto di adattamento edonico (Brickman \& Campbell, 1971) che ha osservato che quando le condizioni ci sono favorevoli, potremme abbassarsi la soglia di ciò che consideriamo un problema, il che può portare a focalizzare l'attenzione su un numero maggiore di preoccupazioni. Il libro consiglia, tra le varie cose, possiamo passare 20 minuti nella natura, tre volte a settimana, per fare una pausa e staccare e, durante questo tempo, i livelli di colesterolo tendono a ridursi\endnote{\raggedright\url{https://www.frontiersin.org/articles/10.3389/fpsyg.2019.00722/full}}. Uno studio ha osservato questo fenomeno anche nei film: se solitamente guardi commedie sarai più coinvolto da situazioni tese rispetto a chi guarda thriller, perché meno abituato\endnote{\raggedright\url{https://www.frontiersin.org/journals/behavioral-neuroscience/articles/10.3389/fnbeh.2024.1396811/full}}.
+Nel libro "Troppo comodi"\endnote{\raggedright\url{https://www.amazon.it/dp/8836201474}} viene spiegato il concetto di adattamento edonico (Brickman \& Campbell, 1971) che ha osservato che quando le condizioni ci sono favorevoli, potremme abbassarsi la soglia di ciò che consideriamo un problema, il che può portare a focalizzare l'attenzione su un numero maggiore di preoccupazioni. Potremmo dire che quando abbiamo certe preoccupazioni più astratte, è una fortuna, perchè non abbiamo grossi problemi in quel momento. Il libro consiglia, tra le varie cose, di passare 20 minuti nella natura, tre volte a settimana, per fare una pausa e staccare e, durante questo tempo, i livelli di colesterolo tendono a ridursi\endnote{\raggedright\url{https://www.frontiersin.org/articles/10.3389/fpsyg.2019.00722/full}}. Uno studio ha osservato questo fenomeno anche nei film: se solitamente guardi commedie sarai più coinvolto da situazioni tese rispetto a chi guarda thriller, perché meno abituato\endnote{\raggedright\url{https://www.frontiersin.org/journals/behavioral-neuroscience/articles/10.3389/fnbeh.2024.1396811/full}}.
 
 \begin{mdframed}[linewidth=1pt]
 Capita che quando desideriamo qualcosa stiamo cercando la sensazione che crediamo ci darà. 
@@ -2530,27 +2514,15 @@ ci pensiamo sappiamo che le persone generalmente fanno una o due settimane all'a
 probabilmente anche loro per il resto dell'anno si troveranno sul divano con la percezione che
 tutti stiano facendo un sacco di cose interessanti. Quando guardiamo i social network, la
 televisione, le riviste di moda ecc… la nostra insoddisfazione potrebbe aumentare se facciamo il paragone con noi e persone
-più ricche, belle, in forma, con più soldi e che si stanno divertendo. L'insoddisfazione dipende dai paragoni che
-facciamo, che dipendono da definizioni e aspettative. Se ci paragoniamo verso l'alto pensiamo che gli altri siano
-migliori di noi, ma anche paragonarsi verso il basso, con persone che crediamo peggiori di noi non ci aiuterà.
+più ricche, belle, in forma, con più soldi e che si stanno divertendo. 
 
 Il confronto con gli altri può rivelarsi problematico, perché non riusciamo a confrontare tutta la nostra vita con quella
 degli altri, ma solo aspetti particolari. Quindi troveremo quello più magro, quello più ricco, quello più bello, ma difficilmente qualcuno senza problemi o difetti. Se ci alleniamo a notare ciò che già realmente abbiamo, ci sarà meno spazio per sentirsi
-insoddisfatti di ciò che non abbiamo. Imparare a vedere il bicchiere mezzo pieno insomma! 
-Per altre persone, l'unica gioia, è che stanno facendo meglio di qualcun altro. Se gli togli questo, possono percepire un grande vuoto. l'unica gioia è qualcuno sta facendo peggio di te. Quanto è malato tutto ciò? Fai qualcosa perché è magnifico, non perché qualcuno non lo fa bene come te\endnote{\raggedright\url{https://www.youtube.com/watch?v=HeX9kuhSLkE}} - Sadhguru
+insoddisfatti di ciò che non abbiamo. 
 
-Quindi come facciamo a cercare la felicità? 
-La felicità è difficile da cercare. Se la cerchi, la stai immaginando, ti ci stai abituando e, spesso gli stai dando delle aspettative. La felicità non possiamo programmarla! Nel momento in cui lo facciamo, rischiamo di toglierli forza. Forse è meglio non chiedersi se siamo felici, perché spesso abbiamo una definizione insostenibile di felicità che difficilmente cambieremo e, anche se ci riuscissimo, forse non la percepiremo mai come "abbastanza". Questo "abbastanza" è potenzialmente infinito e incolmabile. 
+Anche paragonarsi verso il basso, con persone che crediamo peggiori di noi non ci aiuterà. 
 
-Rischiamo di soffrire quando cerchiamo una soluzione a quello che probabilmente non è un problema e, la soluzione la cerchiamo tramite il
-pensiero, cosa difficile per questioni esistenziali e non solo , perché il cervello troverà ipotesi e contro-ipotesi. Dentro
-di noi ci sono tantissime figure, anche contraddittorie, c'è un io solitario, un io compagnone, un io aggressivo, un io
-amorevole, ma solitamente mi identifico in maniera polarizzata con uno solo di questi. 
-Quando sentiamo di esserci comportati in maniera aggressiva non ha senso mortificarsi, perché noi
-non siamo aggressivi, siamo anche aggressivi, il nostro comportamento è stato aggressivo, non noi in assoluto. Anche il
-comportamento opposto non è costruttivo, ovvero dirsi che abbiamo fatto bene a comportarci così e che sono gli altri a
-sbagliare. È importante invece riconoscere che siamo stati aggressivi, senza giudicarci e trovare delle strategie per
-riconoscere quando scatta questa cosa in noi e gestirla. 
+Per alcune persone, l'unica gioia, è che stanno facendo meglio di qualcun altro. Se gli togli questo, possono percepire un grande vuoto. l'unica gioia è qualcuno sta facendo peggio di te. Quanto è malato tutto ciò? Fai qualcosa perché è magnifico, non perché qualcuno non lo fa bene come te\endnote{\raggedright\url{https://www.youtube.com/watch?v=HeX9kuhSLkE}} - Sadhguru
 
 \begin{mdframed}[linewidth=1pt]
 \textbf{Cosa fare se qualcuno sta per aggredirti fisicamente?}
@@ -2565,11 +2537,6 @@ Come evitare lo scontro?\endnote{\raggedright\url{https://www.youtube.com/watch?
 \end{itemize}
 Seguendo questi consigli, puoi cercare di disinnescare la situazione e proteggerti senza ricorrere alla violenza.
 \end{mdframed}
-
-Sarebbe meglio evitare identificazioni troppo rigide, perché il giusto e lo sbagliato non esistono in assoluto e anche quando
-proviamo a definirlo, la nostra definizione è filtrata da mille cose, dai miei schemi mentali,
-bias, fattori culturali, stati emotivi in cui ci troviamo ecc… Insomma, una miriade di errori che non riconosciamo e che
-danno un risultato troppo deformato per poter fare affidamento e attribuirci una cosa così importante come la nostra identità.
 
 Paul Watzlawick in Istruzioni per rendersi infelici, Ci fornisce
 numerosi esempi: se vi concentrate sulle vostre scarpe, vi accorgerete che in alcuni punti possano essere scomode,
@@ -2595,30 +2562,11 @@ invece, ci prova e, se un posto davvero c'è, è probabile che lo troverà! Conf
 collega si convincerà dell'opposto. Quindi se non puoi controllare gli eventi, puoi controllare
 come li interpreti.
 
-Il nostro benessere e la nostra felicità dipendono da come interpretiamo la realtà, che significato e definizione gli
-diamo e quali aspettative avevamo a riguardo. Noi non possiamo vedere la realtà, ma solo interpretarla e probabilmente deformandola. Studi sulla psicologia del linguaggio suggeriscono che il framing linguistico può influenzare le emozioni e la percezione: esprimersi con parole diverse può modellare il nostro stato emotivo.
 
-Persone che parlano in modo diverso della stessa cosa, vivono in modo diverso e la realtà per loro è diversa. c'è
-differenza infatti tra dire:\newline
-“che freddo” o “si congela”\newline
-“ho mal di testa” o “mi scoppia la testa”\newline
-“sono stanco” o “sono distrutto”\newline
-“mi urti” o “mi fai uscire di matto”
 
-Le parole ci suggestionano. Se diciamo “non ho mai tempo” difficilmente riusciremo a introdurre qualcosa di nuovo nella nostra vita.
-Se siamo abituati a dire spesso “sono stanco”, tenderemo a sentirci stanchi davvero. Con questo non vorrei che passasse l'idea che se mi ripeto una cosa diventa realtà, altrimenti basterebbe dire: sono pieno di energie! Riuscendoci a concentrare solo su una cosa per volta, se ci concentriamo solo sulla stanchezza, nella nostra esperienza interna, esisterà solo questo, se ricordiamo solo i momenti della giornata in cui eravamo impegnati e non quelli dove stavamo sui social, potremmo pensare di non avere mai tempo e così via. Se diciamo agli altri: “sei pallido…” o “ti senti bene?” potrebbe portare le persone a indagare dentro di sé la presenza di problemi e spesso qualcosina si riuscirà a trovare e a ingigantirla, quindi se chiedo a qualcuno: "sei arrabbiato", anche se prima non lo era, potrebbe diventarlo. Per questo fare una cosa alla volta è un modo straordinario di meditare e di restare consapevoli.
 
-Altro esempio, dire: “non sono capace” porta con se una giudizio, un limite, che porta alla “profezia che si
-auto-avvera” rendendoti davvero incapace di compiere quella cosa. Mentre dire “non sono ancora capace” da una
-potenzialità completamente diversa all'atto che stai per compiere. Alcuni studi (es. Rosenthal, 1968) evidenziano che le profezie che si auto-avverano tendono a essere più forti nei contesti negativi, dove le aspettative limitanti influenzano il comportamento, quindi ha molto più effetto quando ci scoraggiamo rispetto a quando ci incoraggiamo. Il pensiero positivo volontario può risultare paradossalmente controproducente se non supportato da strategie realistiche: l’effetto placebo funziona meglio quando le suggestioni sono inconsce, non imposte consciamente. Quando utilizziamo
-volontariamente il pensiero positivo, avviene un effetto paradossale, ovvero: Se sono triste e mi sforzo di pensare
-positivo, la sensazione resterà ma, non essendo in linea con il pensiero, la mente vedrà questo come un problema e,
-come sappiamo, il compito del cervello è risolvere i problemi. Questo ci portebbe portare a chiederci cosa
-c'è di sbagliato in noi, cosa dovremmo cambiare e altre domande potenzialmente disfunzionali. Il
-pensiero positivo, che all'apparenza sembra una buona idea, può portare all'effetto
-opposto, peggiorando lo stato d'animo. Pensare ai propri disagi è sempre sbagliato? La tristezza può arrivare per portarci a cambiare qualcosa, altre
-volte invece va tutto bene, ma possono essere le nostre domande a farci diventare tristi, soprattutto quando ci concentriamo su
-quello che non abbiamo e che magari è un desiderio indotto dall'esterno.
+
+
 
 La “positività tossica” si riferisce alla convinzione che si debba mantenere un atteggiamento positivo e ottimista in ogni situazione, ignorando o svalutando le emozioni negative. Uno studio condotto dalla Tilburg University\endnote{Perceiving societal pressure to be happy is linked to poor well-being, especially in happy nations \raggedright\url{https://www.nature.com/articles/s41598-021-04262-z}} nei Paesi Bassi, che ha coinvolto circa 7.443 persone provenienti da 40 diversi paesi, ha esaminato l’impatto della pressione sociale per la felicità sul benessere individuale.
 Il paradosso scoperto è che l’incoraggiamento sociale a mantenere un atteggiamento positivo può avere effetti negativi, portando talvolta a esperienze di emozioni positive meno frequenti e meno intense, mentre potrebbe intensificare quelle negative. Questo studio che ha coinvolto soprattutto in paesi con alto indice di felicità, mostra una correlazionee e non causalità. L’idea di dover essere costantemente felici, che è irrealistica, può far sentire le persone inadeguate e l’atto di reprimere le emozioni negative può paradossalmente intensificarle.
@@ -2682,6 +2630,8 @@ Se mi definisco come quello in cerca della felicità, o triste, depresso; la men
 Quando siamo consapevoli di qualcosa possiamo gestirla, ma quando non ne siamo consapevoli, questo nostro lato potrebbe prendere il sopravvento.
 
 Luca Mazzucchelli dice che se ti stressa ti interessa. Le feste di compleanno dei figlio lo stressano e non lo rendono particolarmente felice, ma per lui è importante rendere felici i suoi bambini. Non si tratta di sconfiggere lo stress, ma dandogli un significato lo si può affrontare meglio, lo si comprende e lo si accetta. Se si ha ansia di parlare in pubblico, non è consigliabile cercare di superare questo ostacolo soltanto di sforzo, ma trovando un valore, una motivazione per fare ciò che si vorrebbe fare. Se ci neghiamo a noi stessi questi lati possono svilupparsi inconsapevolmente fuori dai nostri desideri.
+
+Se ho paura di parlare in pubblico, difficilmente ci sarà qualcosa che posso fare per arrivare pronto, senza paura. Quello che possiamo fare è imparare a gestire le nostre emozioni e parlare davanti al pubblico, nonostante la paura e non senza paura. Coraggioso non è chi non ha paura, anzi, il contrario. Coraggioso è chi, nonostante la paura, riesce ad agire, altrimenti, forse, sarebbe semplicemente mancanza di paura.
 
 Se, ad esempio, abbiamo una forte tendenza a procrastinare e ci raccontiamo che non è così, questo aspetto potrebbe influenzarci, ma in modo inconscio, rendendo più difficile affrontare responsabilità e obiettivi. Riconoscendolo possiamo iniziare a trasformarlo. Prendete l'esempio
 di una persona che di costituzione tende a ingrassare. Se sei consapevole di questa tua caratteristica puoi stare
@@ -4212,6 +4162,8 @@ e pazienza diventeranno sempre più complesse, assumendo forme razionali di pers
 dei dialoghi senza molto senso ad un certo punto. Se riusciamo ad osservare queste immagini e suoni senza cercare di
 controllarli per dargli una forma prima del tempo, ma osservandoli semplicemente come un film, non so il perché, ma
 questo mi aiuta a prendere sonno in poco tempo.
+
+Una tecnica è quella chiamata mental shuffle, dove si pensa ad alcune parole che iniziano con la lettera a, poi con la b, con la c e così via, senza fissarsi troppo sulle singole parole.
 
 L'esercito americano utilizza una tecnica che li aiuta ad
 addormentarsi rapidamente anche in luoghi e situazioni difficili. Può richiedere un paio di settimane di pratica ed è stato
